--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
     <link rel="stylesheet" type="text/css" href="slick-slider/slick/slick-theme.css">
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" type="text/css" href="css/menu.css">
+      <style>
+          .button1 {
+              background-color: transparent;
+              color: white;
+              border-radius: 30px;
+              border: 1px solid;
+              padding: 9px 17px 9px 18px;
+              float: right;
+              margin: 8px;
+              margin-right: 68px;
+          }
+
+          .button1:hover {
+              background-color: #4CAF50;
+              color: white;
+          }
+          @media only screen and (max-device-width: 480px) {
+              .button1 {
+                  margin: auto;
+                  margin-right: 40px;
+              }
+          }
+      </style>
   </head>  
 <body>
 <section class="cd-content">
@@ -22,6 +45,7 @@
   <div class="wrapper">
   	<header class="home_header row column w3-animate-fading">
       <a class="logo" href="index.html"><img src="images/logo-sml.png"/></a>
+        <a class="button button1" href="app/install/login.php">Login</a>
   	</header>
 	
     
