--- a/privacy.html
+++ b/privacy.html
@@ -28,6 +28,26 @@
 		text-decoration:underline;
 		font-weight:400;
 	}
+    .button1 {
+        background-color: transparent;
+        color: white;
+        border-radius: 30px;
+        border: 1px solid;
+        padding: 9px 17px 9px 18px;
+        margin: 8px;
+        margin-right: 68px;
+    }
+
+    .button1:hover {
+        background-color: #4CAF50;
+        color: white;
+    }
+    @media only screen and (max-device-width: 480px) {
+        .button1 {
+            margin: auto;
+            margin-right: 40px;
+        }
+    }
 	</style>
   </head>
   <body>
@@ -36,6 +56,7 @@
            <header class="sub_header row">
            	<div class="small-6 columns">
             	<a class="logo" href="index.html"><img src="images/logo-sml.png"/></a>
+                <a class="button button1" href="app/install/login.php">Login</a>
             </div>
             <div class="small-6 columns text-right">
             	<span class="title">Privacy</span>
