--- a/software.html
+++ b/software.html
@@ -10,6 +10,28 @@
     <link rel="stylesheet" type="text/css" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" type="text/css" href="css/menu.css">
+      <style>
+          .button1 {
+              background-color: transparent;
+              color: white;
+              border-radius: 30px;
+              border: 1px solid;
+              padding: 9px 17px 9px 18px;
+              margin: 8px;
+              margin-right: 68px;
+          }
+
+          .button1:hover {
+              background-color: #4CAF50;
+              color: white;
+          }
+          @media only screen and (max-device-width: 480px) {
+              .button1 {
+                  margin: auto;
+                  margin-right: 40px;
+              }
+          }
+      </style>
   </head>
   <body>
 <section class="cd-content">
@@ -17,6 +39,7 @@
     <header class="sub_header row">
         <div class="small-6 columns">
             <a class="logo" href="index.html"><img src="images/logo-sml.png"/></a>
+            <a class="button button1" href="app/install/login.php">Login</a>
         </div>
         <div class="small-6 columns text-right">
             <span class="title">Products</span>
