--- a/termsofservice.html
+++ b/termsofservice.html
@@ -11,24 +11,48 @@
     <link rel="stylesheet" type="text/css" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" type="text/css" href="css/menu.css">
-    <style>
-	/*---- datapage ----*/
-	.datapage{
-		padding-top:00px;
-	}
-	
-	.datapage h3{
-		margin-top:30px;
-		margin-bottom:15px;
-	}
-	.datapage ul{
-		margin:35px 0 0 !important;
-	}
-	.datapage p a{
-		text-decoration:underline;
-		font-weight:400;
-	}
-	</style>
+      <style>
+          /*---- datapage ----*/
+          .datapage {
+              padding-top: 00px;
+          }
+
+          .datapage h3 {
+              margin-top: 30px;
+              margin-bottom: 15px;
+          }
+
+          .datapage ul {
+              margin: 35px 0 0 !important;
+          }
+
+          .datapage p a {
+              text-decoration: underline;
+              font-weight: 400;
+          }
+
+          .button1 {
+              background-color: transparent;
+              color: white;
+              border-radius: 30px;
+              border: 1px solid;
+              padding: 9px 17px 9px 18px;
+              margin: 8px;
+              margin-right: 68px;
+          }
+
+          .button1:hover {
+              background-color: #4CAF50;
+              color: white;
+          }
+
+          @media only screen and (max-device-width: 480px) {
+              .button1 {
+                  margin: auto;
+                  margin-right: 40px;
+              }
+          }
+      </style>
   </head>
   <body>
 <section class="cd-content">
@@ -36,6 +60,7 @@
            <header class="sub_header row">
            	<div class="small-6 columns">
             	<a class="logo" href="index.html"><img src="images/logo-sml.png"/></a>
+                <a class="button button1" href="app/install/login.php">Login</a>
             </div>
             <div class="small-6 columns text-right">
             	<span class="title">Terms of Service</span>
